--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -26,7 +26,7 @@ body {
     background-color:#a6268a ;
 }
 .btn1hover:hover{
-    background-color: #a6268a!important;
+    background-color:green!important;
 }
 .colorprimary{
     color:#a6268a ;
