--- a/template/index.html
+++ b/template/index.html
@@ -10,15 +10,14 @@
         <section class="banner">
             <div class="container-fluid">
                 <div class="row">
-                    <img src="https://source.unsplash.com/1600x600/?cake" class="p-0 m-0 bannerimg position-relative"
+                    <img src="{% static 'assets/img/olympic2.jpg' %}" class="p-0 m-0 bannerimg position-relative"
                         alt="bakery">
                     <div class="overlay bannerimg position-absolute">
                         <div class="row h-100">
                             <div class="col-12 my-auto text-center text-white">
 
-                                <h1 class="mt-5 ">Online Presence With Opera Bakes And Cakes</h1>
-                                <h5 class="mt-4 mb-5 text-uppercase ">"Desert is like a feel-good song and the best ones
-                                    make you dance"</h5>
+                                <h1 class="mt-5 ">City Of Yokyo</h1>
+                                <h5 class="mt-4 mb-5 text-uppercase ">FunOlympic Games 2023</h5>
                                 <a href="index.html" class="text-white py-3 px-5 a-tag btn1hover border">Get Started</a>
                             </div>
                         </div>
@@ -33,11 +32,9 @@
         <section class="mt-5">
             <div class="container">
                 <div class="row text-center">
-                    <h3 class="text-dark">Welcome To Opera Cakes And Bakes</h3>
+                    <h3 class="text-dark">Welcome To FunOlympics Games</h3>
                     <hr>
-                    <p>We’re a family business who is honored to serve tinthana neighborhood communities. Since
-                        1995, our mission has been simple: to bring smiles to our neighbors. We’re here to help you
-                        celebrate life’s moments, big and small: from A+ spelling tests to milestone birthdays.</p>
+                    <p>One of the key aspects of FunOlympics is the focus on participation and enjoyment rather than elite competition. These events encourage friendly rivalry and teamwork, promoting inclusivity and camaraderie among participants.</p>
                 </div>
             </div>
 
@@ -57,16 +54,16 @@
                         <div class="card choice border-0 position-relative" style="width: 100%; ">
                             <a href="{% url 'productdetail' pd.id%}"><img class="card-img-top" src="{{ pd.image1.url }}" alt="Card image cap"></a>
 
-                            {% with pd.id|stringformat:'s' as idstring %}
-                            {% with  pd.product_name|slice:':3'|add:idstring as id%}
-                            <button type="button"
-                                class="a-tag primarybg text-white px-4 py-3 border-0 btnQuickShop position-absolute"
-                                data-bs-toggle="modal" data-bs-target="#{{id}}">Quick
-                                Shop
-<!--                                {{pd.product_name|slice:':3'|add:'ab'}}-->
-                            </button>
-                            {% endwith %}
-                            {% endwith %}
+<!--                            {% with pd.id|stringformat:'s' as idstring %}-->
+<!--                            {% with  pd.product_name|slice:':3'|add:idstring as id%}-->
+<!--                            <button type="button"-->
+<!--                                class="a-tag primarybg text-white px-4 py-3 border-0 btnQuickShop position-absolute"-->
+<!--                                data-bs-toggle="modal" data-bs-target="#{{id}}">Quick-->
+<!--                                Shop-->
+<!--&lt;!&ndash;                                {{pd.product_name|slice:':3'|add:'ab'}}&ndash;&gt;-->
+<!--                            </button>-->
+<!--                            {% endwith %}-->
+<!--                            {% endwith %}-->
                             <div class="card-body">
                                 <a href="{% url 'productdetail' pd.id%}" class="a-tag"><h5 class="card-title text-center text-dark">Rs {{pd.product_price}}</h5></a>
                                 <a href="{% url 'productdetail' pd.id%}" class="a-tag"><p class="card-text text-dark text-center">{{pd.product_name}}</p></a>
@@ -76,88 +73,88 @@
                     </div>
                     {% with pd.id|stringformat:'s' as idstring %}
                             {% with  pd.product_name|slice:':3'|add:idstring as id%}
-                    <div class="modal fade" id="{{id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-                        aria-hidden="true">
-                            {% endwith%}
-                        {% endwith %}
-                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
-                            <div class="modal-content" style="height:100%; overflow-y: auto;">
-                                <div class="modal-header justify-content-end">
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
+<!--                    <div class="modal fade" id="{{id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"-->
+<!--                        aria-hidden="true">-->
+<!--                            {% endwith%}-->
+<!--                        {% endwith %}-->
+<!--                        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">-->
+<!--                            <div class="modal-content" style="height:100%; overflow-y: auto;">-->
+<!--                                <div class="modal-header justify-content-end">-->
+<!--                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
+<!--                                </div>-->
 
-                                <div class="modal-body">
-                                    <div class="container-fluid">
+<!--                                <div class="modal-body">-->
+<!--                                    <div class="container-fluid">-->
 
-                                        <div class="row pb-1">
-                                            <div class="col-md-12 col-lg-7">
-                                                <div class="row">
-
-
-                                                    <div class="col-12">
-                                                        <img src="{{pd.image1.url}}" alt="product1" width="95%;" class="mainproduct">
+<!--                                        <div class="row pb-1">-->
+<!--                                            <div class="col-md-12 col-lg-7">-->
+<!--                                                <div class="row">-->
 
 
-                                                    </div>
-                                                </div>
-                                            </div>
+<!--                                                    <div class="col-12">-->
+<!--                                                        <img src="{{pd.image1.url}}" alt="product1" width="95%;" class="mainproduct">-->
 
-                                            <div class="col-md-12 col-lg-5 ">
-                                                
-                                                <h5 class="text-dark mt-1">{{pd.product_name}}</h5>
-                                                <hr>
-                                                <h6>Rs {{pd.product_price}}</h6>
-                                                <p class="mt-1">{{pd.product_short_description}}</p>
-                                                <p class="mt-0">{{pd.product_long_description}}</p>
-                                                <a href="{% url 'productdetail' pd.id%}">View Full Details</a>
-                                                <div class="row">
-                                                   <form action="" method="">
-                                                        {% csrf_token %}
 
-                                                        {% if pd.product_category|lower == "cake"%}
-                                                            <div class="form-group">
-                                                            <label>What to write on your cake?</label>
-                                                            <input type="text" maxlength="200" class="form-control cakename-id{{pd.id}}" placeholder="Max 200 character" name="cakename">
-                                                        </div>
-                                                            <div class="form-group">
-                                                            <label>Size (In Pounds)</label>
-                                                            <input type="number" class="form-control cakesize-id{{pd.id}}" name="size">
-                                                                <span class="text-danger sizeerror{{product.id}}" ></span>
-                                                        </div>
-                                                        <div class="form-group">
-                                                            <label>Additional Information</label>
-                                                            <textarea class="form-control description-id{{pd.id}}" name="description"  rows="3"></textarea>
-                                                        </div>
-                                                        {% else %}
-                                                        <div class="form-group">
-                                                            <label >Additional Information</label>
-                                                            <textarea class="form-control description-id{{pd.id}}" name="description" rows="3"></textarea>
-                                                        </div>
-                                                        {% endif %}
+<!--                                                    </div>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
 
-                                                        <div class="row mt-5">
+<!--                                            <div class="col-md-12 col-lg-5 ">-->
+<!--                                                -->
+<!--                                                <h5 class="text-dark mt-1">{{pd.product_name}}</h5>-->
+<!--                                                <hr>-->
+<!--                                                <h6>Rs {{pd.product_price}}</h6>-->
+<!--                                                <p class="mt-1">{{pd.product_short_description}}</p>-->
+<!--                                                <p class="mt-0">{{pd.product_long_description}}</p>-->
+<!--                                                <a href="{% url 'productdetail' pd.id%}">View Full Details</a>-->
+<!--                                                <div class="row">-->
+<!--                                                   <form action="" method="">-->
+<!--                                                        {% csrf_token %}-->
 
-                                                            <div class="col-md-6 col-lg-6 d-flex mt-2 button-container">
-                                                                <a class="bg-light border  btn btn1hover  qtyadd" type="button" value="+"
-                                                                    style="font-size: xx-large;">+</a>
-                                                                <input type="text" value="1" min="1" name="quantity"
-                                                                    class="form-control quantity text-center pquantity_id{{pd.id}}">
-                                                                <a class="bg-light border  btn btn1hover  qtysub" type="button" value="-"
-                                                                    style="font-size: xx-large;">-</a>
-                                                            </div>
-                                                            <div class="col-md-6 col-lg-6 mt-2">
-                                                                <input type="button" data-index="{{pd.id}}" class="border px-5 py-3 btn primarybg text-white ajax_cart" value="Add To Cart">
-                                                            </div>
-                                                        </div>
-                                                   </form>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+<!--                                                        {% if pd.product_category|lower == "cake"%}-->
+<!--                                                            <div class="form-group">-->
+<!--                                                            <label>What to write on your cake?</label>-->
+<!--                                                            <input type="text" maxlength="200" class="form-control cakename-id{{pd.id}}" placeholder="Max 200 character" name="cakename">-->
+<!--                                                        </div>-->
+<!--                                                            <div class="form-group">-->
+<!--                                                            <label>Size (In Pounds)</label>-->
+<!--                                                            <input type="number" class="form-control cakesize-id{{pd.id}}" name="size">-->
+<!--                                                                <span class="text-danger sizeerror{{product.id}}" ></span>-->
+<!--                                                        </div>-->
+<!--                                                        <div class="form-group">-->
+<!--                                                            <label>Additional Information</label>-->
+<!--                                                            <textarea class="form-control description-id{{pd.id}}" name="description"  rows="3"></textarea>-->
+<!--                                                        </div>-->
+<!--                                                        {% else %}-->
+<!--                                                        <div class="form-group">-->
+<!--                                                            <label >Additional Information</label>-->
+<!--                                                            <textarea class="form-control description-id{{pd.id}}" name="description" rows="3"></textarea>-->
+<!--                                                        </div>-->
+<!--                                                        {% endif %}-->
+
+<!--                                                        <div class="row mt-5">-->
+
+<!--                                                            <div class="col-md-6 col-lg-6 d-flex mt-2 button-container">-->
+<!--                                                                <a class="bg-light border  btn btn1hover  qtyadd" type="button" value="+"-->
+<!--                                                                    style="font-size: xx-large;">+</a>-->
+<!--                                                                <input type="text" value="1" min="1" name="quantity"-->
+<!--                                                                    class="form-control quantity text-center pquantity_id{{pd.id}}">-->
+<!--                                                                <a class="bg-light border  btn btn1hover  qtysub" type="button" value="-"-->
+<!--                                                                    style="font-size: xx-large;">-</a>-->
+<!--                                                            </div>-->
+<!--                                                            <div class="col-md-6 col-lg-6 mt-2">-->
+<!--                                                                <input type="button" data-index="{{pd.id}}" class="border px-5 py-3 btn primarybg text-white ajax_cart" value="Add To Cart">-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                   </form>-->
+<!--                                                </div>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
                     {% endfor %}
                 </div>
             </div>
