--- a/template/cart.html
+++ b/template/cart.html
@@ -8,11 +8,11 @@
             <div class="container-fluid contain primarybg">
                 <div class="container mt-5">
 
-                    <h1 class="text-white text-center ">Shopping Cart</h1>
+                    <h1 class="text-white text-center ">Wishlist</h1>
                     <div class="text-center text-white">
                         <h6> <a href="{% url 'home' %}" class="a-tag text-white">Home</a> &nbsp; &nbsp; <i
                                 class="fas fa-long-arrow-alt-right text-white"></i>&nbsp; &nbsp; <a href="{% url 'cart' %}"
-                                class="a-tag text-white">Cart</a></h6>
+                                class="a-tag text-white">Wishlist</a></h6>
                     </div>
                 </div>
             </div>
@@ -29,10 +29,10 @@
                         <thead class="thead-light">
                             <tr>
                                 <th scope="col">Image</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Unit Price</th>
-                                <th scope="col">Amount</th>
+                                <th scope="col">Title</th>
+<!--                                <th scope="col">Quantity</th>-->
+<!--                                <th scope="col">Unit Price</th>-->
+<!--                                <th scope="col">Amount</th>-->
                             </tr>
                         </thead>
                         <tbody>
@@ -49,23 +49,23 @@
 
                             </td>
                             <td >
-                                <div class=" row">
-                                    <div class="col-lg-8 col-md-10 col-sm-12 d-flex">
-                                        <div class="form-group button-container">
-                                            <button class="bg-light border btn btn1hover qtyadd cartqtyadd cartquantitychange" data-index="{{item.cartproduct.id}}" type="button"
-                                        value="+" style="font-size: xx-large; width: 100%;">+</button>
-                                    <input type="text" value="{{item.quantity}}" min="1" name="quantity"
-                                        class="form-control quantity cartquantity{{item.cartproduct.id}} text-center">
-                                    <button class="bg-light border btn btn1hover cartqtysub qtysub cartquantitychange" type="button"
-                                        value="-"  data-index="{{item.cartproduct.id}}"style="font-size: xx-large; width: 100%;">-</button>
-                                        </div>
-                                        
-                                    </div>
-                                    
-                                </div>   
-                            </td>
-                            <td>Rs <span class="unitprice">{{item.cartproduct.product_price}}</span></td>
-                            <td>Rs <span class="amount"></span></td>
+<!--                                <div class=" row">-->
+<!--                                    <div class="col-lg-8 col-md-10 col-sm-12 d-flex">-->
+<!--                                        <div class="form-group button-container">-->
+<!--                                            <button class="bg-light border btn btn1hover qtyadd cartqtyadd cartquantitychange" data-index="{{item.cartproduct.id}}" type="button"-->
+<!--                                        value="+" style="font-size: xx-large; width: 100%;">+</button>-->
+<!--                                    <input type="text" value="{{item.quantity}}" min="1" name="quantity"-->
+<!--                                        class="form-control quantity cartquantity{{item.cartproduct.id}} text-center">-->
+<!--                                    <button class="bg-light border btn btn1hover cartqtysub qtysub cartquantitychange" type="button"-->
+<!--                                        value="-"  data-index="{{item.cartproduct.id}}"style="font-size: xx-large; width: 100%;">-</button>-->
+<!--                                        </div>-->
+<!--                                        -->
+<!--                                    </div>-->
+<!--                                    -->
+<!--                                </div>   -->
+<!--                            </td>-->
+<!--                            <td>Rs <span class="unitprice">{{item.cartproduct.product_price}}</span></td>-->
+<!--                            <td>Rs <span class="amount"></span></td>-->
                                 <td><input type="button" data-index="{{item.cartproduct.id}}" class="btn btn-dark removecart" value="Remove">   </td>
                             </tr>
                        {% endfor %}
@@ -75,12 +75,12 @@
                     </table>
 
                 </div>
-                <div class="row carttableamount" style="float: right;">
-                    <h5>Total = Rs <span class="total"></span></h5>
+<!--                <div class="row carttableamount" style="float: right;">-->
+<!--                    <h5>Total = Rs <span class="total"></span></h5>-->
 
-                </div>
+<!--                </div>-->
                 {% else %}
-                    <h4>No item in a cart</h4>
+                    <h4>No item in a wishlist</h4>
 
                 {% endif %}
 
