--- a/template/categorydetail.html
+++ b/template/categorydetail.html
@@ -24,22 +24,21 @@
             <div class="card choice border-0 position-relative" style="width: 100%; ">
                 <a href="{% url 'productdetail' pd.id%}"><img class="card-img-top" src="{{ pd.image1.url }}" alt="Card image cap"></a>
 
-                {% with pd.id|stringformat:'s' as idstring %}
-                {% with  pd.product_name|slice:':3'|add:idstring as id%}
-                <button type="button"
-                    class="a-tag primarybg text-white px-4 py-3 border-0 btnQuickShop position-absolute"
-                    data-bs-toggle="modal" data-bs-target="#{{id}}">Quick
-                    Shop
+<!--                {% with pd.id|stringformat:'s' as idstring %}-->
+<!--                {% with  pd.product_name|slice:':3'|add:idstring as id%}-->
+<!--                <button type="button"-->
+<!--                    class="a-tag primarybg text-white px-4 py-3 border-0 btnQuickShop position-absolute"-->
+<!--                    data-bs-toggle="modal" data-bs-target="#{{id}}">Quick-->
+<!--                    Shop-->
 
-                </button>
-                {% endwith %}
-                {% endwith %}
+<!--                </button>-->
+<!--                {% endwith %}-->
+<!--                {% endwith %}-->
                 <div class="card-body">
-                    <a href="{% url 'productdetail' pd.id%}" class="a-tag"><h5 class="card-title text-center text-dark">Rs {{pd.product_price}}</h5></a>
+                    <a href="{% url 'productdetail' pd.id%}" class="a-tag"><h5 class="card-title text-center text-dark">{{pd.product_price}}</h5></a>
                     <a href="{% url 'productdetail' pd.id%}" class="a-tag"><p class="card-text text-dark text-center">{{pd.product_name}}</p></a>
                 </div>
             </div>
-
         </div>
         {% with pd.id|stringformat:'s' as idstring %}
                 {% with  pd.product_name|slice:':3'|add:idstring as id%}
