--- a/template/index.html
+++ b/template/index.html
@@ -65,11 +65,10 @@
 <!--                            {% endwith %}-->
 <!--                            {% endwith %}-->
                             <div class="card-body">
-                                <a href="{% url 'productdetail' pd.id%}" class="a-tag"><h5 class="card-title text-center text-dark">Rs {{pd.product_price}}</h5></a>
-                                <a href="{% url 'productdetail' pd.id%}" class="a-tag"><p class="card-text text-dark text-center">{{pd.product_name}}</p></a>
+                                <a href="{% url 'productdetail' pd.id%}" class="a-tag"><h5 class="card-title text-center text-dark">{{pd.product_name}}</h5></a>
+                                <a href="{% url 'productdetail' pd.id%}" class="a-tag"><p class="card-text text-dark text-center">{{pd.product_price}}</p></a>
                             </div>
                         </div>
-                        
                     </div>
                     {% with pd.id|stringformat:'s' as idstring %}
                             {% with  pd.product_name|slice:':3'|add:idstring as id%}
@@ -103,7 +102,7 @@
 <!--                                                -->
 <!--                                                <h5 class="text-dark mt-1">{{pd.product_name}}</h5>-->
 <!--                                                <hr>-->
-<!--                                                <h6>Rs {{pd.product_price}}</h6>-->
+<!--                                                <h6> {{pd.product_price}}</h6>-->
 <!--                                                <p class="mt-1">{{pd.product_short_description}}</p>-->
 <!--                                                <p class="mt-0">{{pd.product_long_description}}</p>-->
 <!--                                                <a href="{% url 'productdetail' pd.id%}">View Full Details</a>-->
@@ -182,8 +181,6 @@
                         </div>
                     </div>
                     {% endfor%}
-
-
                 </div>
 
             </div>
@@ -208,103 +205,103 @@
         </section>
         <!-- End Video -->
 
-        <!-- Featured Product  -->
-        <section class="mt-3 py-5 bg-white">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <h3 class="text-center text-dark">Featured Product of the month</h3>
-                    </div>
-                </div>
+<!--        &lt;!&ndash; Featured Product  &ndash;&gt;-->
+<!--        <section class="mt-3 py-5 bg-white">-->
+<!--            <div class="container">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-12">-->
+<!--                        <h3 class="text-center text-dark">Featured Product of the month</h3>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <hr>
-                <div class="row">
-                    {% if fp_month %}
-                    <div class="col-md-7 col-lg-7">
-                        <div class="row">
-                            <div class="col-3">
-                                <div class="row">
-                                    <img src="{{fp_month.image1.url}}" alt="product1" width="100%;"
-                                        class="mt-3 small-product">
-                                </div>
-                                <div class="row">
-                                    <img src="{{fp_month.image2.url}}" alt="product1" width="100%;"
-                                        class="mt-2 small-product">
-                                </div>
-                                <div class="row">
-                                    <img src="{{fp_month.image3.url}}" alt="product1" width="100%;"
-                                        class="mt-2 small-product">
-                                </div>
-                            </div>
+<!--                <hr>-->
+<!--                <div class="row">-->
+<!--                    {% if fp_month %}-->
+<!--                    <div class="col-md-7 col-lg-7">-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-3">-->
+<!--                                <div class="row">-->
+<!--                                    <img src="{{fp_month.image1.url}}" alt="product1" width="100%;"-->
+<!--                                        class="mt-3 small-product">-->
+<!--                                </div>-->
+<!--                                <div class="row">-->
+<!--                                    <img src="{{fp_month.image2.url}}" alt="product1" width="100%;"-->
+<!--                                        class="mt-2 small-product">-->
+<!--                                </div>-->
+<!--                                <div class="row">-->
+<!--                                    <img src="{{fp_month.image3.url}}" alt="product1" width="100%;"-->
+<!--                                        class="mt-2 small-product">-->
+<!--                                </div>-->
+<!--                            </div>-->
 
-                            <div class="col-9">
-                                <img src="{{fp_month.image1.url}}" alt="product1" width="95%;" class="mt-3" id="mainproduct">
+<!--                            <div class="col-9">-->
+<!--                                <img src="{{fp_month.image1.url}}" alt="product1" width="95%;" class="mt-3" id="mainproduct">-->
 
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-5 col-lg-5  mt-3">
-                        <h5 class="text-dark ">{{fp_month.product_name}}</h5>
-                        <hr>
-                        <h6>Rs{{fp_month.product_price}}</h6>
-                        <p class="mt-3">{{fp_month.product_short_description}}</p>
-                        <p class="mt-0">{{fp_month.product_long_description}}</p>
-                        <div class="row mt-2">
-                            <form action="" method="">
-                                {% csrf_token %}
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="col-md-5 col-lg-5  mt-3">-->
+<!--                        <h5 class="text-dark ">{{fp_month.product_name}}</h5>-->
+<!--                        <hr>-->
+<!--                        <h6>{{fp_month.product_price}}</h6>-->
+<!--                        <p class="mt-3">{{fp_month.product_short_description}}</p>-->
+<!--                        <p class="mt-0">{{fp_month.product_long_description}}</p>-->
+<!--                        <div class="row mt-2">-->
+<!--                            <form action="" method="">-->
+<!--                                {% csrf_token %}-->
 
-                                {% if fp_month.product_category|lower == "cake"%}
-                                    <div class="form-group">
-                                    <label>What to write on your cake?</label>
-                                    <input type="text" maxlength="200" class="form-control cakename-id{{fp_month.id}}" placeholder="Max 200 character" name="cakename">
-                                </div>
-                                    <div class="form-group">
-                                    <label>Size (In Pounds)</label>
-                                    <input type="number" class="form-control cakesize-id{{fp_month.id}}" name="size">
-                                        <span class="text-danger sizeerror{{product.id}}" ></span>
-                                </div>
-                                <div class="form-group">
-                                    <label>Additional Information</label>
-                                    <textarea class="form-control description-id{{fp_month.id}}" name="description"  rows="3"></textarea>
-                                </div>
-                                {% else %}
-                                <div class="form-group">
-                                    <label >Additional Information</label>
-                                    <textarea class="form-control description-id{{fp_month.id}}" name="description" rows="3"></textarea>
-                                </div>
-                                {% endif %}
+<!--                                {% if fp_month.product_category|lower == "cake"%}-->
+<!--                                    <div class="form-group">-->
+<!--                                    <label>What to write on your cake?</label>-->
+<!--                                    <input type="text" maxlength="200" class="form-control cakename-id{{fp_month.id}}" placeholder="Max 200 character" name="cakename">-->
+<!--                                </div>-->
+<!--                                    <div class="form-group">-->
+<!--                                    <label>Size (In Pounds)</label>-->
+<!--                                    <input type="number" class="form-control cakesize-id{{fp_month.id}}" name="size">-->
+<!--                                        <span class="text-danger sizeerror{{product.id}}" ></span>-->
+<!--                                </div>-->
+<!--                                <div class="form-group">-->
+<!--                                    <label>Additional Information</label>-->
+<!--                                    <textarea class="form-control description-id{{fp_month.id}}" name="description"  rows="3"></textarea>-->
+<!--                                </div>-->
+<!--                                {% else %}-->
+<!--                                <div class="form-group">-->
+<!--                                    <label >Additional Information</label>-->
+<!--                                    <textarea class="form-control description-id{{fp_month.id}}" name="description" rows="3"></textarea>-->
+<!--                                </div>-->
+<!--                                {% endif %}-->
 
-                                <div class="row mt-5">
+<!--                                <div class="row mt-5">-->
 
-                                    <div class="col-md-6 col-lg-6 d-flex mt-2 button-container">
-                                        <a class="bg-light border  btn btn1hover  qtyadd" type="button" value="+"
-                                            style="font-size: xx-large;">+</a>
-                                        <input type="text" value="1" min="1" name="quantity"
-                                            class="form-control quantity text-center pquantity_id{{fp_month.id}}">
-                                        <a class="bg-light border  btn btn1hover  qtysub" type="button" value="-"
-                                            style="font-size: xx-large;">-</a>
-                                    </div>
-                                    <div class="col-md-6 col-lg-6 mt-2">
-                                        <input type="button" data-index="{{fp_month.id}}" class="border px-5 py-3 btn primarybg text-white ajax_cart" value="Add To Cart">
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    {% endif %}
-                </div>
-            </div>
-        </section>
-        <!-- End Featured Product  -->
+<!--                                    <div class="col-md-6 col-lg-6 d-flex mt-2 button-container">-->
+<!--                                        <a class="bg-light border  btn btn1hover  qtyadd" type="button" value="+"-->
+<!--                                            style="font-size: xx-large;">+</a>-->
+<!--                                        <input type="text" value="1" min="1" name="quantity"-->
+<!--                                            class="form-control quantity text-center pquantity_id{{fp_month.id}}">-->
+<!--                                        <a class="bg-light border  btn btn1hover  qtysub" type="button" value="-"-->
+<!--                                            style="font-size: xx-large;">-</a>-->
+<!--                                    </div>-->
+<!--                                    <div class="col-md-6 col-lg-6 mt-2">-->
+<!--                                        <input type="button" data-index="{{fp_month.id}}" class="border px-5 py-3 btn primarybg text-white ajax_cart" value="Add To Cart">-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </form>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    {% endif %}-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
+<!--        &lt;!&ndash; End Featured Product  &ndash;&gt;-->
         <!-- Customer Feedback about opera cakes and bakes -->
         <section class="mt-5 py-5 bg-light">
             <div class="container">
                 <div class="row">
-                    <h3 class="text-dark text-center">Customer Feedback About Us</h3>
+                    <h3 class="text-dark text-center">Feedback About Us</h3>
                 </div>
                 <hr>
-                <div class="row  mt-5">
+                <div class="row mt-5">
                     <div class="owl-carousel owl-theme">
                         {% for r in display_review %}
                         <div class="item">
