--- a/template/recepiedetails.html
+++ b/template/recepiedetails.html
@@ -7,11 +7,11 @@
             <div class="container-fluid contain primarybg">
                 <div class="container mt-5">
                    
-                    <h1 class="text-white text-center ">Recepies</h1>
+                    <h1 class="text-white text-center ">News</h1>
                     <div class="text-center text-white">
                         <h6> <a href="{% url 'home' %}" class="a-tag text-white">Home</a> &nbsp; &nbsp; <i
                                 class="fas fa-long-arrow-alt-right text-white"></i>&nbsp; &nbsp; <a href="{% url 'recepie' %}"
-                                class="a-tag text-white">Recepies</a></h6>
+                                class="a-tag text-white">News</a></h6>
                     </div>
                 </div>
             </div>
@@ -31,7 +31,7 @@
                     </div>
                     <div class="col-lg-8 col-md-6">
                         <p>{{ recepie.recepie_description}}</p>
-                        <h6>Ingredients</h6>
+                        <h6>Key Points</h6>
                         <hr>
                         <ul>
                             {% for i in recepie.recepie_ingredient_list %}
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div class="row mt-5">
-                    <h5 class="text-center">Direction</h5>
+                    <h5 class="text-center">Additional Information</h5>
                     <hr>
                     <p>{{ recepie.recepie_direction}}</p>
                 </div>
