--- a/template/ajax.html
+++ b/template/ajax.html
@@ -29,7 +29,7 @@
 
             $('.cartitemlength').html(data.status);
             parent._alert = new parent.Function("alert(arguments[0]);");
-            parent._alert('Item added to cart');
+            parent._alert('Item added to wishlist');
             }
 
         })
@@ -54,7 +54,7 @@
                     $(".carttable").remove()
                     $(".carttableamount").remove()
 
-                    $(".cart_all_empty").html("No item in a cart")
+                    $(".cart_all_empty").html("No item in a wishlist")
 
 
                 }else{
