--- a/template/index.html
+++ b/template/index.html
@@ -172,7 +172,7 @@
                     <div class="col-lg-4  col-md-4">
                         <div class="card border-0" style="width: 100%; ">
                             <a href="{% url 'catdetail' c.id%}" class="a-tag">
-                                <img class="card-img-top" src="{{c.product_category_image.url}}" alt="Card image cap">
+                                <img class="card-img-top" src="{{c.product_category_image.url}}" width="535px" height="355" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title text-center text-dark"> {{c.product_category}}</h5>
 
