--- a/template/base.html
+++ b/template/base.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Opera Cake and Bakes | {% block title %}{% endblock title %}</title>
+    <title>Fun Olympics Games | {% block title %}{% endblock title %}</title>
 
     <!-- Bootstrap cdn link verson 5.0 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -176,8 +176,7 @@
                     <h5 class="pt-80">ABOUT US</h5>
                     <p class="mt-3">
 
-                        We’re a family business who is honored to serve tinthana neighborhood communities.
-                        Since 1995, our mission has been simple: to bring smiles to our neighbors.
+                        One of the key aspects of FunOlympics is the focus on participation and enjoyment rather than elite competition. These events encourage friendly rivalry and teamwork, promoting inclusivity and camaraderie among participants.
                     </p>
                     <p>Copyright &copy;
                         <script>document.write(new Date().getFullYear());</script> All rights reserved | This website is
@@ -216,8 +215,8 @@
                     <ul class="list-group ">
                         <li class="list-group-item d-flex justify-content-between align-items-start">
                             <div class="ms-2 me-auto">
-                                <div class="fw-bold">Chandragiri Municipality-23</div>
-                                Kathmandu, Tinthana
+                                <div class="fw-bold">City Of Yokyo</div>
+                                Fun Olympics Games
                             </div>
 
                         </li>
